--- a/wp7-donor/Donor/ProfileLogin.xaml
+++ b/wp7-donor/Donor/ProfileLogin.xaml
@@ -22,7 +22,38 @@
             <!--Pivot item one-->
             <controls:PivotItem Header="аккаунт">
                 <Grid>
-                    <StackPanel>
+                    <StackPanel Margin="0,10" Name="UserProfile" Visibility="Collapsed">
+                        <StackPanel>
+                            <TextBlock Text="Имя" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                            <TextBlock Text="{Binding User.Name}" Name="ProfileName" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                        </StackPanel>
+                        <StackPanel Margin="0,10">
+                            <TextBlock Text="Пол" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                            <TextBlock Name="ProfileSex" Text="{Binding User.Sex}"  TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                        </StackPanel>
+                        <StackPanel Margin="0,10">
+                            <TextBlock Text="Группа крови" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                            <TextBlock Text="{Binding User.BloodGroup}" Name="ProfileBloodGroup" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                        </StackPanel>
+                        <StackPanel Margin="0,10">
+                            <TextBlock Text="Записано кроводач" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                            <TextBlock Text="18" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                        </StackPanel>
+                    </StackPanel>
+                    <StackPanel Name="RegisterForm" Visibility="Collapsed">
+                        <TextBlock Text="Логин" />
+                        <TextBox x:Name="login1" Text="" />
+                        <TextBlock Text="E-mail" />
+                        <TextBox x:Name="email1" Text="" />
+                        <TextBlock Text="Пароль" />
+                        <PasswordBox x:Name="password1" Password="" />
+                        <TextBlock Text="Подтвердите пароль" />
+                        <PasswordBox x:Name="password2" Password="" />
+                        <TextBlock Text="Имя" />
+                        <TextBox x:Name="name1" Text="" />
+                        <Button Name="RegisterButton" Content="Регистрация" Click="RegisterButton_Click" />
+                    </StackPanel>
+                    <StackPanel Name="LoginForm">
                         <TextBlock Text="Введите e-mail" />
                         <TextBox x:Name="email" Text="m0rg0t.Anton@gmail.com" />
                         <TextBlock Text="Введите пароль" />
